[tool.poetry]
name = "langchain_bedrock_image_tool"
version = "0.1.0"
description = "Langchain Bedrock Image Tool"
readme = "README.md"
authors = ["shijunx <shijunx@amazon.com>"]
license = "MIT"
classifiers = [
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.10",
]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
langchain = "^0.0.310"
steamship = "^2.17.31"
boto3 = "^1.28.62"
python-dotenv = "^1.0.0"

[tool.poetry.group.dev.dependencies]
pylint = "^2.17.4"
isort = "^5.12.0"
pytest = "^7.3.1"
tox = "^4.5.2"
mkdocs = "^1.4.3"
mkdocs-material = "^8.5.11"
pytest-pylint = "^0.19.0"
pre-commit = "^3.3.2"
jupyter = "^1.0.0"
matplotlib = "^3.8.0"
pillow = "^10.0.1"
pandas = "^2.1.1"
datasets = "^2.14.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
[tool.pytest.ini_options]
testpaths = "tests"
python_files = "tests.py test_*.py *_tests.py"

[tool.pylint.design]
max-line-length = 120
